--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     ]
   },
   "dependencies": {
-    "@polkadot/api": "6.0.5",
-    "@polkadot/types": "6.0.5",
-    "@polkadot/extension-dapp": "0.40.3",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@ethersproject/experimental": "^5.0.1",
     "@kaco/sdk": "^3.5.9",
     "@kaco/uikit": "^0.46.31",
+    "@polkadot/api": "6.0.5",
+    "@polkadot/extension-dapp": "0.40.3",
+    "@polkadot/types": "6.0.5",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/multicodec": "^1.0.0",
     "@types/node": "^13.13.5",
@@ -60,6 +60,7 @@
     "ethers": "^5.1.4",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
+    "http-proxy-middleware": "^2.0.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "lottie-web": "^5.7.13",
@@ -86,6 +87,7 @@
     "swiper": "^6.6.1",
     "typescript": "^4.3.2"
   },
+  "proxy": "https://bind.kaco.finance",
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
