--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 REACT_APP_CHAIN_ID = "336"
 REACT_APP_GTAG = "GTM-TLF66T4"
+REACT_APP_API_PROFILE = ""
 
 # 10+ nodes balanced, US/EU
 # REACT_APP_NODE_1 = "https://rpc.shibuya.astar.network:8545"
