--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,9 @@
 REACT_APP_CHAIN_ID = "336"
 # REACT_APP_CHAIN_ID = "81"
 REACT_APP_GTAG = "GTM-TLF66T4"
+REACT_APP_API_PROFILE = https://bind.kaco.finance
 
+REACT_APP_API_PROFILE = ""
 # 10+ nodes balanced, US/EU
 REACT_APP_NODE_1 = "https://rpc.shiden.astar.network:8545"
 # REACT_APP_NODE_1 = "https://rpc.shibuya.astar.network:8545"
