--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,5 @@
 REACT_APP_CHAIN_ID = "56"
+REACT_APP_API_PROFILE = https://bind.kaco.finance
 
 REACT_APP_NODE_1 = "https://bsc-dataseed1.ninicoin.io"
 REACT_APP_NODE_2 = "https://bsc-dataseed1.ninicoin.io"
