--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@polkadot/types": "6.0.5",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@ethersproject/experimental": "^5.0.1",
-    "@kaco/sdk": "../kaco-toolkit/packages/kaco-swap-sdk-bsc",
-    "@kaco/uikitv2": "../kaco-toolkit/packages/kaco-uikit",
+    "@kaco/sdk": "^2.5.4",
+    "@kaco/uikitv2": "0.0.2",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/multicodec": "^1.0.0",
     "@types/node": "^13.13.5",
