add astar header

--- a/.env.development
+++ b/.env.development
@@ -1,18 +1,17 @@
-REACT_APP_CHAIN_ID = "336"
+REACT_APP_CHAIN_ID = "592"
 REACT_APP_GTAG = "GTM-TLF66T4"
 REACT_APP_API_PROFILE = ""
 
 # 10+ nodes balanced, US/EU
 # REACT_APP_NODE_1 = "https://rpc.shibuya.astar.network:8545"
-REACT_APP_NODE_1 = "https://rpc.shiden.astar.network:8545"
+REACT_APP_NODE_1 = "https://rpc.astar.network:8545"
 
 # 10+ nodes balanced, US/EU
 # REACT_APP_NODE_2 = "https://rpc.shibuya.astar.network:8545"
-REACT_APP_NODE_2 = "https://rpc.shiden.astar.network:8545"
+REACT_APP_NODE_2 = "https://rpc.astar.network:8545"
 
 # 10+ nodes balanced in each region, global
-# REACT_APP_NODE_3 = "https://rpc.shibuya.astar.network:8545"
-REACT_APP_NODE_3 = "https://rpc.shiden.astar.network:8545"
+REACT_APP_NODE_3 = "https://rpc.astar.network:8545"
 
 REACT_APP_GRAPH_API_PROFILE = "https://api.thegraph.com/subgraphs/name/pancakeswap/profile"
 REACT_APP_GRAPH_API_PREDICTION = "https://api.thegraph.com/subgraphs/name/pancakeswap/prediction"
