--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@binance-chain/bsc-connector": "^1.0.0",
     "@ethersproject/experimental": "^5.0.1",
-    "@kaco/sdk": "^3.5.9",
+    "@kaco/sdk": "../kaco-toolkit/packages/kaco-swap-sdk",
     "@kaco/uikit": "^0.46.31",
     "@polkadot/api": "6.0.5",
     "@polkadot/extension-dapp": "0.40.3",
@@ -62,6 +62,7 @@
     "graphql-request": "^3.4.0",
     "http-proxy-middleware": "^2.0.1",
     "js-cookie": "^2.2.1",
+    "jsbi": "^3.1.1",
     "lodash": "^4.17.21",
     "lottie-web": "^5.7.13",
     "multicodec": "^2.0.0",
