--- a/.env.development
+++ b/.env.development
@@ -1,21 +1,45 @@
 REACT_APP_CHAIN_ID = "592"
+# REACT_APP_CHAIN_ID = "81"
 REACT_APP_GTAG = "GTM-TLF66T4"
+REACT_APP_API_PROFILE = https://bind.kaco.finance
+
 REACT_APP_API_PROFILE = ""
+# REACT_APP_NODE_1 = "https://rpc.astar.network:8545"
+# REACT_APP_NODE_2 = "https://rpc.astar.network:8545"
+# REACT_APP_NODE_3 = "https://rpc.astar.network:8545"
 
-# 10+ nodes balanced, US/EU
-# REACT_APP_NODE_1 = "https://rpc.shibuya.astar.network:8545"
-REACT_APP_NODE_1 = "https://rpc.astar.network:8545"
 
-# 10+ nodes balanced, US/EU
-# REACT_APP_NODE_2 = "https://rpc.shibuya.astar.network:8545"
-REACT_APP_NODE_2 = "https://rpc.astar.network:8545"
+REACT_APP_NODE_1 = "https://rpc.shiden.astar.network:8545"
+REACT_APP_NODE_2 = "https://rpc.shiden.astar.network:8545"
+REACT_APP_NODE_3 = "https://rpc.shiden.astar.network:8545"
 
-# 10+ nodes balanced in each region, global
-REACT_APP_NODE_3 = "https://rpc.astar.network:8545"
+
+
+REACT_APP_GRAPHREACT_APP_CHAIN_ID = "592"
+# REACT_APP_CHAIN_ID = "81"
+REACT_APP_GTAG = "GTM-TLF66T4"
+REACT_APP_API_PROFILE = https://bind.kaco.finance
+
+REACT_APP_API_PROFILE = ""
+# REACT_APP_NODE_1 = "https://rpc.astar.network:8545"
+# REACT_APP_NODE_2 = "https://rpc.astar.network:8545"
+# REACT_APP_NODE_3 = "https://rpc.astar.network:8545"
+
+
+REACT_APP_NODE_1 = "https://rpc.shiden.astar.network:8545"
+REACT_APP_NODE_2 = "https://rpc.shiden.astar.network:8545"
+REACT_APP_NODE_3 = "https://rpc.shiden.astar.network:8545"
+
+
 
 REACT_APP_GRAPH_API_PROFILE = "https://api.thegraph.com/subgraphs/name/pancakeswap/profile"
 REACT_APP_GRAPH_API_PREDICTION = "https://api.thegraph.com/subgraphs/name/pancakeswap/prediction"
 REACT_APP_GRAPH_API_LOTTERY = "https://api.thegraph.com/subgraphs/name/pancakeswap/lottery"
 
-REACT_APP_SNAPSHOT_BASE_URL = "https://testnet.snapshot.org"
-REACT_APP_SNAPSHOT_VOTING_API = "https://xtjyd0liqe.execute-api.ap-northeast-1.amazonaws.com/dev/api"
+REACT_APP_SNAPSHOT_BASE_URL = "https://hub.snapshot.page"
+REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PROFILE = "https://api.thegraph.com/subgraphs/name/pancakeswap/profile"
+REACT_APP_GRAPH_API_PREDICTION = "https://api.thegraph.com/subgraphs/name/pancakeswap/prediction"
+REACT_APP_GRAPH_API_LOTTERY = "https://api.thegraph.com/subgraphs/name/pancakeswap/lottery"
+
+REACT_APP_SNAPSHOT_BASE_URL = "https://hub.snapshot.page"
+REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"
