--- a/.env.production
+++ b/.env.production
@@ -4,10 +4,16 @@ REACT_APP_GTAG = "GTM-TLF66T4"
 REACT_APP_API_PROFILE = https://bind.kaco.finance
 
 REACT_APP_API_PROFILE = ""
-REACT_APP_NODE_1 = "https://rpc.astar.network:8545"
+# REACT_APP_NODE_1 = "https://rpc.astar.network:8545"
+# REACT_APP_NODE_2 = "https://rpc.astar.network:8545"
+# REACT_APP_NODE_3 = "https://rpc.astar.network:8545"
 
-REACT_APP_NODE_2 = "https://rpc.astar.network:8545"
-REACT_APP_NODE_3 = "https://rpc.astar.network:8545"
+
+REACT_APP_NODE_1 = "https://rpc.shiden.astar.network:8545"
+REACT_APP_NODE_2 = "https://rpc.shiden.astar.network:8545"
+REACT_APP_NODE_3 = "https://rpc.shiden.astar.network:8545"
+
+
 
 REACT_APP_GRAPH_API_PROFILE = "https://api.thegraph.com/subgraphs/name/pancakeswap/profile"
 REACT_APP_GRAPH_API_PREDICTION = "https://api.thegraph.com/subgraphs/name/pancakeswap/prediction"
