--- a/.env.development
+++ b/.env.development
@@ -26,10 +26,10 @@ REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PR
 
 
 # ASTR_MAINNET
-# REACT_APP_CHAIN_ID = 592
-# REACT_APP_NODE_1 = https://rpc.astar.network:8545
-# REACT_APP_NODE_2 = https://rpc.astar.network:8545
-# REACT_APP_NODE_3 = https://rpc.astar.network:8545
+REACT_APP_CHAIN_ID = 592
+REACT_APP_NODE_1 = https://rpc.astar.network:8545
+REACT_APP_NODE_2 = https://rpc.astar.network:8545
+REACT_APP_NODE_3 = https://rpc.astar.network:8545
 
 # ASTR_TESTNET
 # REACT_APP_CHAIN_ID = 81
@@ -39,10 +39,10 @@ REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PR
 
 
 # SDN_MAINNET
-REACT_APP_CHAIN_ID = 336
-REACT_APP_NODE_1 = https://rpc.shiden.astar.network:8545
-REACT_APP_NODE_2 = https://rpc.shiden.astar.network:8545
-REACT_APP_NODE_3 = https://rpc.shiden.astar.network:8545
+# REACT_APP_CHAIN_ID = 336
+# REACT_APP_NODE_1 = https://rpc.shiden.astar.network:8545
+# REACT_APP_NODE_2 = https://rpc.shiden.astar.network:8545
+# REACT_APP_NODE_3 = https://rpc.shiden.astar.network:8545
 
 
 # SDN_TESTNET
