--- a/.env.production
+++ b/.env.production
@@ -5,15 +5,15 @@ REACT_APP_API_PROFILE = https://bind.kaco.finance
 
 REACT_APP_API_PROFILE = ""
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_1 = "https://rpc.shiden.astar.network:8545"
+REACT_APP_NODE_1 = "https://shiden.api.onfinality.io/public"
 # REACT_APP_NODE_1 = "https://rpc.shibuya.astar.network:8545"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_2 = "https://rpc.shiden.astar.network:8545"
+REACT_APP_NODE_2 = "https://shiden.api.onfinality.io/public"
 # REACT_APP_NODE_2 = "https://rpc.shibuya.astar.network:8545"
 
 # 10+ nodes balanced in each region, global
-REACT_APP_NODE_3 = "https://rpc.shiden.astar.network:8545"
+REACT_APP_NODE_3 = "https://shiden.api.onfinality.io/public"
 # REACT_APP_NODE_3 = "https://rpc.shibuya.astar.network:8545"
 
 REACT_APP_GRAPH_API_PROFILE = "https://api.thegraph.com/subgraphs/name/pancakeswap/profile"
