--- a/.env.development
+++ b/.env.development
@@ -27,9 +27,9 @@ REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PR
 
 # ASTR_MAINNET
 REACT_APP_CHAIN_ID = 592
-REACT_APP_NODE_1 = https://rpc.astar.network:8545
-REACT_APP_NODE_2 = https://rpc.astar.network:8545
-REACT_APP_NODE_3 = https://rpc.astar.network:8545
+REACT_APP_NODE_1 = https://astar.api.onfinality.io/public
+REACT_APP_NODE_2 = https://astar.api.onfinality.io/public
+REACT_APP_NODE_3 = https://astar.api.onfinality.io/public
 
 # ASTR_TESTNET
 # REACT_APP_CHAIN_ID = 81
@@ -40,9 +40,9 @@ REACT_APP_NODE_3 = https://rpc.astar.network:8545
 
 # SDN_MAINNET
 # REACT_APP_CHAIN_ID = 336
-# REACT_APP_NODE_1 = https://rpc.shiden.astar.network:8545
-# REACT_APP_NODE_2 = https://rpc.shiden.astar.network:8545
-# REACT_APP_NODE_3 = https://rpc.shiden.astar.network:8545
+# REACT_APP_NODE_1 = https://evm.shiden.astar.network
+# REACT_APP_NODE_2 = https://evm.shiden.astar.network
+# REACT_APP_NODE_3 = https://evm.shiden.astar.network
 
 
 # SDN_TESTNET
