--- a/.env.development
+++ b/.env.development
@@ -4,15 +4,15 @@ REACT_APP_API_PROFILE = ""
 
 # 10+ nodes balanced, US/EU
 # REACT_APP_NODE_1 = "https://rpc.shibuya.astar.network:8545"
-REACT_APP_NODE_1 = "https://shiden.blastapi.io/4ad9cfa9-b4ad-4cf4-bb2c-fdc5ba747c36"
+REACT_APP_NODE_1 = https://shiden.blastapi.io/a98a19be-3c39-41bf-befe-5ca901b8695d
 
 # 10+ nodes balanced, US/EU
 # REACT_APP_NODE_2 = "https://rpc.shibuya.astar.network:8545"
-REACT_APP_NODE_2 = "https://shiden.blastapi.io/4ad9cfa9-b4ad-4cf4-bb2c-fdc5ba747c36"
+REACT_APP_NODE_2 = https://shiden.blastapi.io/a98a19be-3c39-41bf-befe-5ca901b8695d
 
 # 10+ nodes balanced in each region, global
 # REACT_APP_NODE_3 = "https://rpc.shibuya.astar.network:8545"
-REACT_APP_NODE_3 = "https://shiden.blastapi.io/4ad9cfa9-b4ad-4cf4-bb2c-fdc5ba747c36"
+REACT_APP_NODE_3 = https://shiden.blastapi.io/a98a19be-3c39-41bf-befe-5ca901b8695d
 
 REACT_APP_GRAPH_API_PROFILE = "https://api.thegraph.com/subgraphs/name/pancakeswap/profile"
 REACT_APP_GRAPH_API_PREDICTION = "https://api.thegraph.com/subgraphs/name/pancakeswap/prediction"
